# T_Biometria

./: .gitignore
backend/voz/: main.cpp  tasks.json
backend/voz/voz/: CMakeLists.txt  voz.cpp  voz.h
backend/voz/voz/features/: mfcc.cpp  mfcc.h
backend/voz/voz/preprocessing/: denoise.cpp  denoise.h  normalize.cpp  normalize.h  vad.cpp  vad.h
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/cpp/: CMakeLists.txt  compare_voice_features.c  ear_comparator.c  libmfcc.c  libmfcc.h  mfcc.c  mfcc.h
frontend/android/app/src/main/kotlin/com/example/tesisprueba/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: biometria_services.dart  main.dart
frontend/lib/screens/: biometric_db_helper.dart  biometric_verification.dart  ear_comparator_ffi.dart  ear_register.dart  face_register.dart  face_verify.dart  home_page.dart  home_screen.dart  iris_register.dart  login_screen.dart  oido_page.dart  palm_register.dart  register_screen.dart  splash_screen.dart  voice_comparator_ffi.dart  voice_mfcc_ffi.dart  voice_register.dart  voz_page.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/services/: biometria_services.dart
frontend/test/: widget_test.dart
frontend/utils/: biometric_helper.dart
frontend/windows/flutter/: generated_plugins.cmake
